[project]
name = "unitflow"
version = "0.1.0"
description = "Elegant engineering math substrate for executable MBSE."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
numpy = ["numpy>=2.4.3"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "numpy>=2.0.0",
    "pytest>=9.0.2",
]

