[project]
name = "unitflow"
version = "0.1.1"
description = "Elegant engineering math substrate for executable MBSE."
readme = "PYPI.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/ThunderGraph/unitflow"
Repository = "https://github.com/ThunderGraph/unitflow"
Issues = "https://github.com/ThunderGraph/unitflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
numpy = ["numpy>=2.4.3"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "numpy>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (we use l/r for left/right in dispatch)
    "UP007",  # use X | Y for union types (we use both styles intentionally)
    "UP040",  # type keyword for TypeAlias (incompatible with conditional TYPE_CHECKING pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["unitflow"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unitflow.backends.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "--cov=unitflow --cov-report=term-missing"
testpaths = ["tests"]

